@@ -1,3 +1,8 @@
+2014-09-13  Tom Tromey  <tom@tromey.com>
+
+	* gdb.python/py-value.exp (test_value_numeric_ops): Add test that
+	uses value as an index.
+
 2014-09-12  Edjunior Barbosa Machado  <emachado@linux.vnet.ibm.com>
 
 	PR tdep/17379
