@@ -1,3 +1,9 @@
+2014-09-13  Tom Tromey  <tom@tromey.com>
+
+	* python/py-value.c (value_object_as_number): Add
+	nb_inplace_divide entry, nb_inplace_floor_divide,
+	nb_inplace_true_divide, nb_index.
+
 2014-09-12  Edjunior Barbosa Machado  <emachado@linux.vnet.ibm.com>
 	    Ulrich Weigand  <uweigand@de.ibm.com>
 
